# oneflow_yolov3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cocotest2017.txt  requirements.txt  setup.py  test_trainvalno5k.txt  yolo_evaluate.sh  yolo_predict.sh  yolo_predict_python_data_preprocess.sh  yolo_predict_python_data_preprocess_multiprocess.sh  yolo_test_benchmark.sh  yolo_train.sh
data/: test_trainvalno5k.txt  with_dir_data_names
oneflow_yolov3/model/: data_preprocess.py  data_preprocess_multiprocess.py  predict_with_print_box.py  python_load_data_predict_with_print_box.py  python_load_data_predict_with_print_box_multiprocessing.py  utils.py  yolo_evaluate.py  yolo_net.py  yolo_test_python.py  yolo_train.py
oneflow_yolov3/ops/: __init__.py  upsample_nearest.py  yolo_decode.py  yolo_detect.py  yolo_nms.py
ops/: CMakeLists.txt  logistic_kernel.cpp  logistic_op.cpp  upsample_nearest.cu  yolo_box_diff_kernel.cu  yolo_box_diff_op.cpp  yolo_detect_kernel.cu  yolo_detect_op.cpp  yolo_kernel_util.cu  yolo_kernel_util.cuh  yolo_non_maximum_suppression.cpp  yolo_non_maximum_suppression_gpu.cu  yolo_predict_decoder.cpp  yolo_prob_loss_kernel.cu  yolo_prob_loss_op.cpp  yolo_train_decoder.cpp
ops/darknet_dependencies/include/: darknet.h
scripts/: build.sh  clean.sh  get_coco_dataset.sh  link.sh  manual.sh
yolov3/: __init__.py
yolov3/model/: predict.py  predict_with_print_box.py  yolo_net.py
yolov3/ops/: upsample_nearest.py  yolo_nms.py
